<resources>
    <!--Generales-->
    <string name="app_name" translatable="false">BUSTATION</string>
    <string name="tv_correo">Email</string>
    <string name="tv_clave">Email</string>
    <string name="tv_titulo_inicio">BUSTATION</string>

    <!--Página de Inicio-->
    <string name="bt_inicio_sesion">Inicio Sesión</string>
    <string name="bt_registrar">Registrarse</string>
    <string name="tv_slogan_inicio">¡Planea con exactitud la hora de tu próximo viaje!</string>
    <string name="tv_texto_inicio">Ahorra tiempo conociendo la ruta de los buses públicos en Costa Rica. La aplicación le permitirá saber en tiempo real la ubicación del bus que usted necesita saber. ¡Unase a nosotros!</string>

    <!--Página de inicio de sesión-->
    <string name="bt_iniciar_sesion">Iniciar sesión</string>
    <string name="bt_registrate">Registrate</string>
    <string name="tv_no_tienes_cuenta">No tienes cuenta?</string>
    <string name="tv_inicio_sesionMayuscula">INICIO DE SESIÓN</string>
    <string name="ph_correo">Correo</string>
    <string name="ph_contrasena">Contraseña</string>

    <!--Página de registrarse-->
    <string name="tv_crearcuenta">CREAR CUENTA</string>
    <string name="bt_cancelar">Cancelar</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Página Home-->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="contacto">Contacto</string>
    <string name="historia">Historia</string>
    <string name="terminos_uso">Términos de uso</string>
    <string name="equipo">Equipo</string>
    <string name="acerca_de">Acerca de</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="rol">Administrador</string>

    <!-- Página historia-->
    <string name="tv_historia">La App BU-STATION nace gracias a la idea de 3 estudiantes de la Universidad Fidélitas en Costa Rica, donde en un proyecto a realizar en uno de sus cursos, se proponen diseñar la idea de mostrar la ruta de los buses en tiempo real, con el fin de ayudar a los usuario a ahorrarse tiempos de espera y así ayudarlos a tener un mejor uso de su tiempo.\n\nA raíz de esta idea, este grupo de personas, trabajan en el diseño de la aplicación por más de tres meses, donde compartiendo sus ideas y asesorados por una profesora, logran culminar este objetivo que llegó a traer un suspiro a todas aquellas personas.</string>
    <string name="tv_historia_titulo">Historia</string>

    <!-- Página términos-->
    <string name="tv_terminos">El titular se reserva el derecho de realizar cualquier tipo de modificación en el sitio web en cualquier momento y sin previo aviso, el usuario acepta dichas modificaciones.\n\nLa presente describe los términos y condiciones aplicables al uso del contenido, productos y/o servicios del sitio web y la app de &quot;BU-STATION&quot;. Para hacer uso del contenido, productos y/o servicios del sitio web el usuario deberá sujetarse a los presentes términos y condiciones.\n</string>
    <string name="tv_terminos_titulo">Términos de Uso</string>

    <!-- Página contacto-->
    <string name="tv_contacto">El titular se reserva el derecho de realizar cualquier tipo de modificación en el sitio web en cualquier momento y sin previo aviso, el usuario acepta dichas modificaciones.\n\nLa presente describe los términos y condiciones aplicables al uso del contenido, productos y/o servicios del sitio web y la app de &quot;BU-STATION&quot;. Para hacer uso del contenido, productos y/o servicios del sitio web el usuario deberá sujetarse a los presentes términos y condiciones.\n</string>
    <string name="tv_contacto_titulo">Contactenos</string>
    <string name="tv_contacto_nombre">Nombre:</string>
    <string name="tv_contacto_comentario">Comentario:</string>
    <string name="tv_contacto_enviar">ENVIAR</string>

    <!-- Página equipo-->
    <string name="tv_desc_Mario">Vecino de Guadalupe, San José. Está cursando su segundo año de carrera en íngenieria en sistemas. Le gusta mucho todo lo que tiene que ver con tecnología, porque entiende que es un medio que ayuda al ser humano a tener una mejor calidad de vida y también a ser mejor persona</string>
    <string name="tv_desc_Christian">Editar...</string>
    <string name="tv_equipo_titulo">Equipo</string>

    <!--Página escribanos-->
    <string name="bt_escribanos">Escribanos</string>
    <string name="bt_facebook">BU-STATION</string>
    <string name="bt_instagram">bu-station_cr</string>
    <string name="bt_web">www.bu-station.com</string>
    <string name="msg_mensaje">Hola, estoy realizando una App del Curso de Progra Móvil, es solo una prueba.</string>

    msg_lugar_added
    <!--Página para añadir datos de buses-->
    <string name="msg_bus">Bus</string>
    <string name="msg_precio">Precio</string>
    <string name="msg_dias">Días</string>
    <string name="msg_horario">Horario</string>
    <string name="msg_descripcion">Descripción</string>
    <string name="msg_agregar_bus">Agregar Bus</string>
    <string name="msg_bus_added">Bus agregado…</string>
    <string name="bt_update_bus">Actualizar Bus</string>
    <string name="msg_bus_updated">Bus actualizado…</string>
    <string name="msg_data">Faltan datos!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Página de paradas-->
    <string name="bus_bt_ruta">Ver Ruta Actual</string>
    <string name="bus_bt_parada">Consultar Parada</string>
    <string name="main_msg_titulo">BIENVENIDO</string>
    <string name="main_msg_info">Consulte la ruta del bus que desee</string>
    <string name="main_bt_periferica">Periferica</string>
    <string name="main_bt_escazu">Escazú</string>
    <string name="main_bt_alajuela">Alajuela</string>
    <string name="main_bt_fidelitas">Fidélitas</string>

    <!--Periferica-->
    <string name="busperi_msg_titulo">Periférica 1</string>
    <string name="busperi_msg_hora">Horario: 5am - 9pm</string>
    <string name="busperi_precio">Precio: ₡500</string>
    <string name="busperi_dias_operacion">Días de operación: Todos los días</string>
    <string name="busperi_descripcion">Descripción:</string>
    <string name="busperi_descripcion_info">El autobús PERIFÉRICA L1 (Terminal Hatillo 2, Centro de Reciclaje Municipal > Terminal Hatillo 2, Centro de Reciclaje Municipal) es  una línea circular con 72 paradas, comenzando en Hatillo 2,  Centro de Reciclaje Municipal.</string>

    <!--Escazu-->
    <string name="busescazu_msg_titulo">Escazú</string>
    <string name="busescazu_msg_hora">Horario: 5am - 9pm</string>
    <string name="busescazu_precio">Precio: ₡1500</string>
    <string name="busescazu_dias_operacion">Días de operación: Todos los días</string>
    <string name="busescazu_descripcion">Descripción:</string>
    <string name="busescazu_descripcion_info">La línea SAN JOSÉ - ESCAZÚ CENTRO de autobús (Terminal Escazú, Costado Norte Parque Escazú → Terminal San José, Parque Ministerio De La Salud) tiene 16 paradas desde Terminal Escazú, Costado Norte Parque Escazú hasta Terminal San José, Parque Ministerio De La Salud.</string>

    <!--Alajuela-->
    <string name="busalajuela_msg_titulo">Tuasa Alajuela</string>
    <string name="busalajuela_msg_hora">Horario: 5am - 9pm</string>
    <string name="busalajuela_precio">Precio: ₡800</string>
    <string name="busalajuela_dias_operacion">Días de operación: Todos los días</string>
    <string name="busalajuela_descripcion">Descripción:</string>
    <string name="busalajuela_descripcion_info">La línea SAN JOSÉ - ALAJUELA COLECTIVO de autobús (Terminal Tuasa Alajuela → Terminal Tuasa San José Station Wagon) tiene 32 paradas desde Terminal Tuasa Alajuela hasta Terminal Tuasa San José Station Wagon.</string>

    <!--Fidélitas-->
    <string name="busfide_msg_titulo">Bus de la Fidélitas</string>
    <string name="busfide_msg_hora">Horario: 5am - 9pm</string>
    <string name="busfide_precio">Precio: ₡300</string>
    <string name="busfide_dias_operacion">Días de operación: Lunes a Viernes</string>
    <string name="busfide_descripcion">Descripción:</string>
    <string name="busfide_descripcion_info">La línea SAN JOSÉ - SAN PEDRO - GRANADILLA (Universidad Fidelitas) de autobús (Terminal San José → Terminal Urb. Mansiones, Cercanías Club Campestre La Campiña) tiene 33 paradas desde Terminal San José hasta Terminal Urb. Mansiones, Cercanías Club Campestre La Campiña.</string>

</resources>