<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_ejemplo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00426E"
    android:orientation="vertical"
    android:padding="15sp"
    android:paddingStart="20sp"
    android:paddingLeft="15sp"
    android:paddingTop="15sp"
    android:paddingEnd="15sp"
    android:paddingRight="15sp"
    android:paddingBottom="15sp"
    tools:context=".ui.Contacto">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="327dp"
        android:layout_height="74dp"
        android:layout_marginTop="10dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="BUSTATION"
        android:textColor="#FFDD00"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:paddingTop="5sp"
        android:paddingBottom="15sp"
        android:text="@string/tv_contacto_titulo"
        android:textColor="#FFDD00"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="313dp"
        android:layout_height="43dp"
        android:layout_marginBottom="10sp"
        android:ems="10"
        android:hint="@string/tv_contacto_nombre"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/et_mailcontacto"
        android:layout_width="314dp"
        android:layout_height="43dp"
        android:layout_marginBottom="15sp"
        android:ems="10"
        android:hint="@string/tv_correo"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_contacto_comentario"
        android:textColor="#FFDD00"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_comentario"
        android:layout_width="313dp"
        android:layout_height="169dp"
        android:background="#07578C"
        android:backgroundTint="#07578C"
        android:gravity="top"
        android:inputType="text|textMultiLine"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/bt_enviar"
        android:layout_width="163dp"
        android:layout_height="58dp"
        android:layout_marginStart="85sp"
        android:layout_marginTop="15sp"
        android:text="@string/tv_contacto_enviar" />

</LinearLayout>