<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".ui.InicioSesion">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="413dp"
            android:layout_height="221dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/busparada" />

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/main_msg_titulo"
            android:textColor="#000000"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.356" />

        <TextView
            android:id="@+id/tv_dias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_msg_info"
            android:textColor="#000000"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.481" />

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="2dp"
            android:background="#41000000"
            android:backgroundTint="#000000"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.539" />

        <Button
            android:id="@+id/bt_peri"
            android:layout_width="138dp"
            android:layout_height="62dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="85dp"
            android:backgroundTint="#0D47A1"
            android:text="@string/main_bt_periferica"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dias" />

        <Button
            android:id="@+id/bt_escazu"
            android:layout_width="138dp"
            android:layout_height="62dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="#0D47A1"
            android:text="@string/main_bt_escazu"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_fidelitas" />

        <Button
            android:id="@+id/bt_alajuela"
            android:layout_width="138dp"
            android:layout_height="62dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"
            android:backgroundTint="#0D47A1"
            android:text="@string/main_bt_alajuela"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_peri" />

        <Button
            android:id="@+id/bt_fidelitas"
            android:layout_width="138dp"
            android:layout_height="62dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="#0D47A1"
            android:text="@string/main_bt_fidelitas"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dias" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>