<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_titulo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity"
    android:background="@drawable/fondo_degradado">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/bt_inicio"
            android:layout_width="169dp"
            android:layout_height="56dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="70dp"
            android:text="@string/bt_inicio_sesion"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#000000"
            android:textSize="20sp"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="#2B1717" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="162dp"
            android:layout_height="56dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="70dp"
            android:text="@string/bt_inicio_sesion"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#000000"
            android:textSize="20sp"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="#2B1717"
            tools:text="@string/bt_registrar" />

        <TextView
            android:id="@+id/tv_titulo_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/tv_titulo_inicio"
            android:textColor="#CF9E11"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tv_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/tv_slogan_inicio"
            android:textColor="#CF9E11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_titulo_inicio" />

        <TextView
            android:id="@+id/tv_texto"
            android:layout_width="297dp"
            android:layout_height="68dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/tv_texto_inicio"
            android:textAlignment="center"
            android:textColor="#CF9E11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_slogan" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="373dp"
            android:layout_height="270dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/foto_pantalla_inicio" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>