<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00426E"
    android:padding="20sp">
    <!--xmlns:tools="http://schemas.android.com/tools"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="17dp"
    tools:context=".Historia"-->

    <TextView
        android:id="@+id/tv_historia"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/tv_historia_titulo"
        android:textColor="#FFDD00"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="470dp"
        android:background="#00426E"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/tv_bustation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_historia">
        <!--tools:context=".Historia"
        tools:layout_editor_absoluteX="16dp">-->

        <TextView
            android:id="@+id/tv_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tv_historia"
            android:textColor="#FFDD00"
            android:textSize="24sp" />
    </ScrollView>

    <TextView
        android:id="@+id/tv_bustation"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="casual"
        android:text="@string/tv_titulo_inicio"
        android:textColor="#FFDD00"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="2dp"
        android:layout_marginBottom="15dp"
        android:background="#41000000"
        android:backgroundTint="#FFFFFF"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.539" />

</androidx.constraintlayout.widget.ConstraintLayout>